--- a/app/matplotlib.ipynb
+++ b/app/matplotlib.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Matplotlib"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Matplotlib"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T13:10:24.836233Z",
+     "start_time": "2023-07-07T13:10:24.614382Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# import matplotlib.pyplot as plt\n",
@@ -19,17 +26,13 @@
     "import pandas as pd\n",
     "\n",
     "%matplotlib inline"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T13:10:24.836233Z",
-     "start_time": "2023-07-07T13:10:24.614382Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 1 Line plot\n",
     "\n",
@@ -40,31 +43,44 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about line plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-07-07T12:36:31.669207Z",
      "start_time": "2023-07-07T12:36:31.661449Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "years = [2015, 2016, 2017, 2018, 2019]\n",
     "population = [100, 120, 150, 180, 200]\n",
     "\n",
-    "# write your code here"
+    "# 1. Create a line plot\n",
+    "plt.plot(years, population)\n",
+    "\n",
+    "# 2. Set the labels for x and y axis\n",
+    "plt.xlabel(\"Years\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "\n",
+    "# 3. Set the title for the plot\n",
+    "plt.title(\"Population Growth (2015-2019)\")\n",
+    "\n",
+    "# 4. Show the plot\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 2 Scatter plot\n",
     "\n",
@@ -79,14 +95,18 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about scatter plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T12:47:34.656048Z",
+     "start_time": "2023-07-07T12:47:34.642774Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "x = np.random.rand(50)\n",
@@ -95,17 +115,13 @@
     "sizes = 100 * np.random.rand(50)\n",
     "\n",
     "# write your code here"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T12:47:34.656048Z",
-     "start_time": "2023-07-07T12:47:34.642774Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 3 Bar plot\n",
     "\n",
@@ -116,31 +132,31 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about bar plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T12:49:12.735444Z",
+     "start_time": "2023-07-07T12:49:12.724986Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "categories = [\"Category A\", \"Category B\", \"Category C\", \"Category D\"]\n",
     "sales = [350, 480, 210, 590]\n",
     "\n",
     "# write your code here\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T12:49:12.735444Z",
-     "start_time": "2023-07-07T12:49:12.724986Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 4 Histogram\n",
     "\n",
@@ -152,30 +168,30 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about histogram [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T12:57:36.966131Z",
+     "start_time": "2023-07-07T12:57:36.923563Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "data = np.random.normal(0, 1, 1000)\n",
     "\n",
     "# write your code here\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T12:57:36.966131Z",
-     "start_time": "2023-07-07T12:57:36.923563Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 5 Pie plot\n",
     "\n",
@@ -187,31 +203,31 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about pie plot [here](https://matplotlib.org/stable/gallery/pie_and_polar_charts/pie_features.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T12:59:33.557461Z",
+     "start_time": "2023-07-07T12:59:33.546332Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "labels = [\"Product A\", \"Product B\", \"Product C\", \"Product D\"]\n",
     "market_share = [30, 20, 15, 35]\n",
     "\n",
     "# write your code here"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T12:59:33.557461Z",
-     "start_time": "2023-07-07T12:59:33.546332Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 6 Subplots\n",
     "\n",
@@ -226,14 +242,18 @@
     "* show it horizontally.\n",
     "\n",
     "> PLease, note: you can get more information about subplots [here](https://matplotlib.org/stable/gallery/subplots_axes_and_figures/subplots_demo.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T13:06:18.164655Z",
+     "start_time": "2023-07-07T13:06:18.135609Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "x = np.linspace(0, 5, 100)\n",
@@ -241,17 +261,13 @@
     "y2 = np.cos(x)\n",
     "\n",
     "# write your code here\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T13:06:18.164655Z",
-     "start_time": "2023-07-07T13:06:18.135609Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Task 7 Time Series\n",
     "\n",
@@ -263,31 +279,31 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about time series [here](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T13:14:23.477527Z",
+     "start_time": "2023-07-07T13:14:23.411604Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "dates = pd.date_range(\"2023-01-01\", \"2023-12-31\", freq=\"D\")\n",
     "values = pd.Series(range(len(dates)), index=dates)\n",
     "\n",
     "# write your code here\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T13:14:23.477527Z",
-     "start_time": "2023-07-07T13:14:23.411604Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# (Optional) Task 8 Surface 3D Plot\n",
     "\n",
@@ -299,14 +315,18 @@
     "* show it.\n",
     "\n",
     "> Please, note: you can get more information about 3D surface plot [here](https://matplotlib.org/stable/gallery/mplot3d/surface3d.html)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-07T13:14:32.708967Z",
+     "start_time": "2023-07-07T13:14:32.671257Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "x = np.linspace(-5, 5, 100)\n",
@@ -315,42 +335,35 @@
     "Z = X**2 + Y**2\n",
     "\n",
     "# write your code here\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-07T13:14:32.708967Z",
-     "start_time": "2023-07-07T13:14:32.671257Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# (Optional) Task 9\n",
     "\n",
     "You are working for a retail company that wants to understand its customer base better. The company has collected various demographic and purchasing behavior data for a sample of customers. Your task is to create a scatter plot matrix to visualize the relationships between different variables and identify potential customer segments based on their characteristics. The scatter plot matrix will allow you to observe the pairwise relationships between multiple variables simultaneously.\n",
     "\n",
     "> Please, note: you can find the file with data in the `data` folder."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "outputs": [],
-   "source": [
-    "# write your code here\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-07-07T13:32:10.318014Z",
      "start_time": "2023-07-07T13:32:10.281335Z"
-    }
-   }
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# write your code here\n"
+   ]
   }
  ],
  "metadata": {
