--- a/app/matplotlib.ipynb
+++ b/app/matplotlib.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-07T12:47:34.656048Z",
@@ -109,12 +109,30 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generate random data\n",
     "x = np.random.rand(50)\n",
     "y = np.random.rand(50)\n",
     "colors = np.random.rand(50)\n",
     "sizes = 100 * np.random.rand(50)\n",
     "\n",
-    "# write your code here"
+    "# 1. Create a scatter plot with colors and sizes\n",
+    "# alpha is added for transparency to see overlapping points better\n",
+    "scatter = plt.scatter(x, y, c=colors, s=sizes, alpha=0.6, cmap='viridis')\n",
+    "\n",
+    "# 2. Set the title and labels for x and y axis\n",
+    "plt.xlabel(\"X Value\")\n",
+    "plt.ylabel(\"Y Value\")\n",
+    "plt.title(\"Random Scatter Plot with Colors and Sizes\")\n",
+    "\n",
+    "# 3. Set the colorbar and its label\n",
+    "cbar = plt.colorbar(scatter)\n",
+    "cbar.set_label(\"Random Color Scale\")\n",
+    "\n",
+    "# 4. Show the plot\n",
+    "plt.show()"
    ]
   },
   {
