--- a/app/matplotlib.ipynb
+++ b/app/matplotlib.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-07T12:49:12.735444Z",
@@ -164,10 +164,24 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "categories = [\"Category A\", \"Category B\", \"Category C\", \"Category D\"]\n",
     "sales = [350, 480, 210, 590]\n",
     "\n",
-    "# write your code here\n"
+    "# Create a bar plot\n",
+    "plt.bar(categories, sales)\n",
+    "\n",
+    "# Set the title and labels for x and y axis\n",
+    "plt.title(\"Sales by Category\")\n",
+    "plt.xlabel(\"Categories\")\n",
+    "plt.ylabel(\"Sales\")\n",
+    "\n",
+    "# Rotate the x ticks by 45 degrees\n",
+    "plt.xticks(rotation=45)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
    ]
   },
   {
